--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description - file : README.md
 long_description_content_type = text/markdown
 version = attr: src.baseproject.__version__
 url = https://github.com/gabe-camp/base-project
-license_files = LICENSE.txt
+license_files = LICENSE
 classifiers =
   Development Status :: 4 - Beta
   Programming Language :: Python :: 3.8
