--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,5 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[semantic_release]
+version_variable = setup.py:__version__
