--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [semantic_release]
-version_variable = setup.py:__version__
+version_variable = [
+  'src/baseproject/__init__.py:__version__',
+  'setup.py:__version__'
+]
