--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ classifiers =
 python_requires = >= 3.8
 packages = find:
 package_dir = src
+install_requires =
+  python-semantic-release~=7.16.0
 
 [options.packages.find]
 where = src
