--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ packages = find:
 package_dir = src
 install_requires =
   python-semantic-release~=7.16.0
+  python-dotenv~=0.17.0
 
 [options.packages.find]
 where = src
