--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,14 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[flake8]
+exclude =
+  .git,
+  .tox,
+  __pycache__,
+  build,
+  dist,
+  *.pyc,
+  *.egg-info,
+  venv
