--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ package_dir = src
 install_requires =
   python-semantic-release~=7.16.0
   python-dotenv~=0.17.0
+  flake8~=2.2.0
 
 [options.packages.find]
 where = src
